# aws-agentic-trust

./: .gitignore  Makefile  README.md
agentictrust/: README.md  pyproject.toml
agentictrust/backend/: README.md  __init__.py  main.py
agentictrust/backend/api/: __init__.py  dependencies.py
agentictrust/backend/api/v1/: __init__.py  router.py
agentictrust/backend/api/v1/endpoints/: __init__.py  agents.py  bridge.py  capabilities.py  (+4 more)
agentictrust/backend/bridge/: README.md  __init__.py  __main__.py  auth_middleware.py  main.py  server.py
agentictrust/backend/config/: __init__.py  database.py  settings.py
agentictrust/backend/core/: __init__.py  exceptions.py  logging.py  middleware.py
agentictrust/backend/core/agent/: __init__.py  engine.py
agentictrust/backend/core/mcp/: __init__.py  engine.py  persistence.py  transport.py  utils.py
agentictrust/backend/data/: __init__.py  paths.py  schema.sql  sqlite.py
agentictrust/backend/data/migrations/: add_usage_tracking.sql
agentictrust/backend/data/models/: __init__.py  agent.py  base.py  logs.py  mcp.py  observability.py  prompt.py  resource.py  tool.py  usage_tracking.py
agentictrust/backend/schemas/: __init__.py  agent.py  capabilities.py  logs.py  mcp.py  responses.py
agentictrust/backend/scripts/: README.md  cleanup_database.py
agentictrust/frontend/: package-lock.json  package.json
agentictrust/frontend/public/: config.json
agentictrust/frontend/src/app/: layout.tsx  page.tsx
agentictrust/frontend/src/components/: app-sidebar.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  top-header.tsx
(+33 files in other folders)
